# Proxyshop-Electron

./: .eslintrc.json  .gitignore  .prettierrc  README.md  package-lock.json  package.json
backend/: .editorconfig  api.py  pyproject.toml
src/main/: IPCs.ts  index.ts
src/preload/: index.ts
src/renderer/public/locales/en/: common.json
src/renderer/screens/: Main.tsx
src/renderer/store/slices/: appScreenSlice.ts
